--- a/m1-lesson2/pom.xml
+++ b/m1-lesson2/pom.xml
@@ -49,10 +49,10 @@
 
         <!-- security -->
 
-<!--         <dependency> -->
-<!--             <groupId>org.springframework.boot</groupId> -->
-<!--             <artifactId>spring-boot-starter-security</artifactId> -->
-<!--         </dependency> -->
+         <dependency>
+             <groupId>org.springframework.boot</groupId>
+             <artifactId>spring-boot-starter-security</artifactId>
+         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
