--- a/m2-lesson4/pom.xml
+++ b/m2-lesson4/pom.xml
@@ -132,7 +132,13 @@
 		    <groupId>org.springframework.security</groupId>
 		    <artifactId>spring-security-test</artifactId>
 		    <scope>test</scope>
-		</dependency>      
+		</dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>32.0.1-jre</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
